# softverova-podpora

./: README.md
dron-tello/ocr-controller/: dron.py  readme.txt  utils.py
drone-robocup2023/: README.txt
drone-robocup2023/color-recognition/: README.txt  color_threshold.py
drone-robocup2023/drone-library-v1/: Action.py  Altitude.py  MaskMaker.py  Movement.py  PathFollower.py  PathRecorder.py  Shape.py  ShapeRecognizer.py  hsv_trackbar_tello_realtime.py  main.py  utils.py
drone-robocup2023/shape-detection/: README.txt  qadrilateral_recognition.py
drone-robocup2023/test_OpenCV/: testik.py
drone-robocup2023/trackbar-HSV/: README.txt  trackbar.py  trackbar_tello_realtime.py
drone-robocup2023/videorecorder/: README.txt  videorecorder.py  videorecorder_tello_v1.py
kamera-libcamera/detect-red/: camera_module.cpp  camera_module.h  spracuj_obraz.c  zapis_obrazky.c
kamera-libcamera/simple-cam/: meson.build  readme.txt  simple-cam.cpp
kamera-libcamera/zapis_obrazky/: CMakeLists.txt  camera_module.cpp  meson.build
kamera-v4l/: Makefile  navod.txt  spracuj_obraz.c  zapis_obrazky.c
rpi-arduino/: navod.txt
rpi-arduino/rpi/: priklad_komunikacie.c
